[gd_scene load_steps=18 format=3 uid="uid://ch63kee6kg1v6"]

[ext_resource type="Script" path="res://game.gd" id="1_vtwrw"]
[ext_resource type="PackedScene" uid="uid://bn3d3dbdhsgkp" path="res://chicken.tscn" id="2_6yjqb"]
[ext_resource type="PackedScene" uid="uid://b3maos1bmde40" path="res://farmer.tscn" id="3_2f2yj"]
[ext_resource type="PackedScene" uid="uid://cxatnpyg8xf5d" path="res://player.tscn" id="4_pvgp8"]
[ext_resource type="Script" path="res://NumberChickensLeftLabel.gd" id="5_f3opp"]
[ext_resource type="PackedScene" uid="uid://cecgy5ts0eynj" path="res://game_main_music.tscn" id="6_ogcdl"]

[sub_resource type="CylinderMesh" id="CylinderMesh_vgxbu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_npnyv"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="Curve3D" id="Curve3D_px41p"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 10.0749, 0, -10.1449, 0, 0, 0, 0, 0, 0, 10.0749, 0, 10.0049, 0, 0, 0, 0, 0, 0, -10.0749, 0, 10.0049, 0, 0, 0, 0, 0, 0, -10.0749, 0, -10.0749, 0, 0, 0, 0, 0, 0, 10.0749, 0, -10.1449),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_2hcuv"]

[sub_resource type="PlaneMesh" id="PlaneMesh_7q1uj"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e4ha7"]
albedo_color = Color(0.364706, 0.196078, 0, 1)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_gpi2b"]
plane = Plane(1, 0, 0, -15)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_8vt8n"]
plane = Plane(-1, 0, 0, -15)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_eeps2"]
plane = Plane(0, 0, 1, -15)

[sub_resource type="WorldBoundaryShape3D" id="WorldBoundaryShape3D_rvhw2"]
plane = Plane(0, 0, -1, -15)

[sub_resource type="Theme" id="Theme_yeo8b"]
default_font_size = 22

[node name="Game" type="Node3D"]
script = ExtResource("1_vtwrw")
chicken_scene = ExtResource("2_6yjqb")
farmer_scene = ExtResource("3_2f2yj")

[node name="MainLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0)

[node name="Player" parent="." instance=ExtResource("4_pvgp8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CameraPivot" type="Marker3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, -0.5, 0)

[node name="Camera3D" type="Camera3D" parent="Player/CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.96974, 0.244139, 0, -0.244139, 0.96974, 0, 3.21605, 20.5306)
projection = 1
size = 30.0

[node name="Cylinders" type="Node3D" parent="."]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 10)
mesh = SubResource("CylinderMesh_vgxbu")
surface_material_override/0 = SubResource("StandardMaterial3D_npnyv")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -10)
mesh = SubResource("CylinderMesh_vgxbu")
surface_material_override/0 = SubResource("StandardMaterial3D_npnyv")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -10)
mesh = SubResource("CylinderMesh_vgxbu")
surface_material_override/0 = SubResource("StandardMaterial3D_npnyv")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10)
mesh = SubResource("CylinderMesh_vgxbu")
surface_material_override/0 = SubResource("StandardMaterial3D_npnyv")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_px41p")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 10.0749, 0, -10.1449)

[node name="WorldBoundaries" type="Node3D" parent="."]

[node name="Ground" type="StaticBody3D" parent="WorldBoundaries"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldBoundaries/Ground"]
shape = SubResource("WorldBoundaryShape3D_2hcuv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldBoundaries/Ground"]
transform = Transform3D(15, 0, 0, 0, 1, 0, 0, 0, 15, 0, 0, 0)
mesh = SubResource("PlaneMesh_7q1uj")
surface_material_override/0 = SubResource("StandardMaterial3D_e4ha7")

[node name="WallX1" type="StaticBody3D" parent="WorldBoundaries"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldBoundaries/WallX1"]
shape = SubResource("WorldBoundaryShape3D_gpi2b")

[node name="WallX2" type="StaticBody3D" parent="WorldBoundaries"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldBoundaries/WallX2"]
shape = SubResource("WorldBoundaryShape3D_8vt8n")

[node name="WallZ1" type="StaticBody3D" parent="WorldBoundaries"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldBoundaries/WallZ1"]
shape = SubResource("WorldBoundaryShape3D_eeps2")

[node name="WallZ2" type="StaticBody3D" parent="WorldBoundaries"]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="WorldBoundaries/WallZ2"]
shape = SubResource("WorldBoundaryShape3D_rvhw2")

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_yeo8b")

[node name="NumberChickensLeftLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 68.0
offset_top = 39.0
offset_right = 189.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Chickens left :"
script = ExtResource("5_f3opp")

[node name="ChickenTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="FarmerTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="GameMainMusic" parent="." instance=ExtResource("6_ogcdl")]

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="ChickenTimer" to="." method="_on_chicken_timer_timeout"]
[connection signal="timeout" from="FarmerTimer" to="." method="_on_farmer_timer_timeout"]
